--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div id="logo">
+	<div align="center">
+		<%= image_tag("assets/Juntas.Logo.png") %>
+	</div>
+</div>
