add form on sign up page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,16 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+ #logo {
+ 	padding-top: 40px;
+ 	padding-bottom: 40px; 
+ }
+
+li {
+	display: inline; 
+	padding: 70px;
+	font-size: 20px;
+	font-style: 'Copperplate/Copperplate Gothic Light', sans-serif;
+
+}
