--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,11 @@
-<div id="logo">
-	<div align="center">
-		<%= image_tag("assets/Juntas.Logo.png") %>
+<div align="center" id="logo">
+	<div id="logo">
+		<%= image_tag("JuntasLogo.png") %>
 	</div>
+	<ul style="list-style-type:none">
+		<li>Mission</li>
+		<li><%= link_to "Become a Member", "/signup" %></li>
+		<li>Meet the Team</li>
+	</ul>
+
 </div>
