--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,25 @@
-<h1>New User</h1>
-<hr> 
-
-
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<h1 align="center">Sign Up</h1>
+		<hr>
+		<%= form_for @user do |f|%>
+			<div class="form-group">
+				<%= f.label :full_name, "Name" %>
+				<%= f.text_field :full_name, autofocus: true, class: "form-control"%> 
+			</div>
+			<div class="form-group">
+				<%= f.label :email, "Email" %>
+				<%= f.email_field :email, class: "form-control"%> 
+			</div>
+			<div class="form-group">
+				<%= f.label :password, "Password" %>
+				<%= f.password_field :password, class: "form-control"%> 
+			</div>
+			<div class="form-group">
+				<%= f.label :bio, "Bio" %>
+				<%= f.text_area :bio, class: "form-control"%> 
+			</div>
+			<%= f.submit "Become A Member", class: "btn btn-warning"%>
+		<% end %> 
+	</div>
+</div>
