--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<h1 align="center">My Profile</h1>
 
+	</div>
+</div>
