--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
-		<h1 align="center">My Profile</h1>
-
+		<h1 align="center"><%= @user.full_name %></h1>
+			<p><%= @user.email %></p>
+			<p><%= @user.bio %></p>
 	</div>
 </div>
