--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
-<h1>All users</h1>
-<hr> 
-
-<% @users.each do |user|%>
-	<%= user.full_name %> - 
-<% end %>  
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<h1 align="center">Members</h1>
+		<% @users.each do |user|%>
+			<p><%= link_to user.full_name, user_path(user) %></p>
+		<% end %> 
+	</div>
+</div>
