--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,21 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<h1 align="center">Edit Profile</h1>
+		<hr>
+		<%= form_for @user do |f|%>
+			<div class="form-group">
+				<%= f.label :full_name, "Name" %>
+				<%= f.text_field :full_name, autofocus: true, class: "form-control"%> 
+			</div>
+			<div class="form-group">
+				<%= f.label :email, "Email" %>
+				<%= f.email_field :email, class: "form-control"%> 
+			</div>
+			<div class="form-group">
+				<%= f.label :bio, "Bio" %>
+				<%= f.text_area :bio, class: "form-control"%> 
+			</div>
+			<%= f.submit "Edit Profile", class: "btn btn-warning"%>
+		<% end %> 
+	</div>
+</div>
