--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,9 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<h1 align="center"><%= @user.full_name %></h1>
-			<p><%= @user.email %></p>
-			<p><%= @user.bio %></p>
+		<p><%= @user.email %></p>
+		<p><%= @user.bio %></p>
+		<%= link_to "Edit", edit_user_path(@user), class: "btn btn-success" %> 
+		<%= link_to 'Delete Profile', user_path(current_user), method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-danger" %>
 	</div>
 </div>
