--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,53 @@
 <html>
 <head>
   <title>Juntas</title>
-  <!-- bootstrap css --> 
+  <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%= csrf_meta_tags %>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="container">
-	<%= yield %>
-</div>
+<!-- navbar -->
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <%= image_tag "JuntasLogo.png", class: "logo pull-left" %>
+        <%= link_to "Juntas", root_path, class: "navbar-brand" %>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <% if current_user %>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.full_name %><span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Your Profile", user_path(current_user), class: "btn btn-danger"%></li>
+            <li><%= link_to "Edit Profile", edit_user_path(current_user), class: "btn btn-success" %></li>
+            <li><%= link_to "Logout", logout_path, class: "nav-links", class: "btn btn-danger" %></li>
+            <li><%= link_to 'Delete Profile', user_path(current_user), method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-danger" %>  
+            </li>
+          </ul>
+        </li>
+        <% else %>
+        <li><%= link_to "Signup", signup_path, class: "nav-links" %></li>
+        <li><%= link_to "Login", login_path, class: "nav-links" %></li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
+  <!-- error message -->
+  <% flash.each do |name, msg| %>
+    <div class="alert <%= name == 'error' ? 'alert-danger' : 'alert-info' %>">
+      <div class="container">
+        <%= msg %>
+      </div>
+    </div>
+  <% end %>
 
+
+
+		<%= yield %>
+
+	<%= javascript_include_tag 'application' %>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
-</html>
+</html> 
