test color schema on navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <%= image_tag "JuntasLogo.png", class: "logo pull-left" %>
-        <%= link_to "Juntas", root_path, class: "navbar-brand" %>
+       <!--  <%= image_tag "JuntasLogo.png", class: "logo pull-left" %> -->
       </div>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
