--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,10 +2,10 @@
 	<div class="col-md-6 col-md-offset-3">
 		<h1 align="center">Sign Up</h1>
 		<hr>
-		<%= form_for @user do |f|%>
+		<%= form_for @user, url: users_path, html: { multipart: true } do |f| %>
 			<div class="form-group">
-				<%= f.label :full_name, "Name" %>
-				<%= f.text_field :full_name, autofocus: true, class: "form-control"%> 
+				<%= f.label :full_name, "First Name" %>
+				<%= f.text_field :full_name, autofocus: true, class: "form-control" %> 
 			</div>
 			<div class="form-group">
 				<%= f.label :email, "Email" %>
@@ -19,6 +19,10 @@
 				<%= f.label :bio, "Bio" %>
 				<%= f.text_area :bio, class: "form-control"%> 
 			</div>
+			<div class="input-field">
+				<p><strong>Image<strong><p>
+        <%= f.file_field :avatar %>
+      </div>  
 			<%= f.submit "Become A Member", class: "btn btn-warning"%>
 		<% end %> 
 	</div>
