--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,16 @@
-<div class="row">
-	<div class="col-md-6 col-md-offset-3">
+<div class="container" id="user_profile">
+	<div class="col-lg-12 text-center well">
 		<h1 align="center"><%= @user.full_name %></h1>
-		<p><%= @user.email %></p>
-		<p><%= @user.bio %></p>
-		<%= link_to "Edit", edit_user_path(@user), class: "btn btn-success" %> 
-		<%= link_to 'Delete Profile', user_path(current_user), method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-danger" %>
+		<h3 align="center"><%= @user.email %></h3>
+		<h3 align="center"><%= @user.bio %></h3>
+		<%= image_tag @user.avatar(:medium) %>
+		<h4 class="text-center"> Joined on <%= @user.created_at.to_date.to_formatted_s(:long_ordinal) %></h4>
+		
+	
+			<br>
+			<br>
 	</div>
 </div>
+
+	
+	
