add checklist to show and edit pages, but not rendering on show page.

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,6 +19,17 @@
         <p>Image<p>
         <%= f.file_field :avatar %>
         </br>  
+      <div class="form_row">
+			  <label for="interests[]">Interests:</label>
+			  <br><%= check_box_tag 'interests[]', 'html' %> HTML
+			  <br><%= check_box_tag 'interests[]', 'css' %> CSS
+			  <br><%= check_box_tag 'interests[]', 'node.js' %> Node.JS
+			  <br><%= check_box_tag 'interests[]', 'javascript' %> JavaScriipt
+			  <br><%= check_box_tag 'interests[]', 'ruby' %> Ruby
+			  <br><%= check_box_tag 'interests[]', 'angular' %> Angular
+			  <br><%= check_box_tag 'interests[]', 'swift' %> Swift
+			</div>
+			<div> 
       </div>
 			<%= f.submit "Edit Profile", class: "btn btn-warning"%>
 		<% end %> 
