--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,7 +24,7 @@
 			  <br><%= check_box_tag 'interests[]', 'html' %> HTML
 			  <br><%= check_box_tag 'interests[]', 'css' %> CSS
 			  <br><%= check_box_tag 'interests[]', 'node.js' %> Node.JS
-			  <br><%= check_box_tag 'interests[]', 'javascript' %> JavaScriipt
+			  <br><%= check_box_tag 'interests[]', 'javascript' %> JavaScript
 			  <br><%= check_box_tag 'interests[]', 'ruby' %> Ruby
 			  <br><%= check_box_tag 'interests[]', 'angular' %> Angular
 			  <br><%= check_box_tag 'interests[]', 'swift' %> Swift
