--- a/app/views/partials/_interests.html.erb
+++ b/app/views/partials/_interests.html.erb
@@ -1,10 +1,4 @@
+<h4 align="center">Members</h4>
 <div class="row">
-	<ul>
-  <% unless current_user.nil? then -%>  
-    <% @user_interests.each do |interests| -%>
-      li<%= interests.name %>/li
-    <% end %>
-  <% end %>   
-<ul>    
 
 </div>
