--- a/app/views/interests/show.html.erb
+++ b/app/views/interests/show.html.erb
@@ -1,8 +1,15 @@
 <div class="container" id="user_profile">
 	<div class="col-lg-12 text-center well">
-		<h1 align="center">Interests</h1>
-			<h3 align="center"><%= @interest.name %></h3>
+			<h1 align="center"><%= @interest.name %></h1>
+			<h2 align="center">Members</h2>
+	
+    </div>
+  </div>
 	<!-- 	// exactly the opposite as in the profile page -->
 	<!-- Same logic but reverse association -->
 	</div>
 </div>
+
+
+	
+
