--- a/app/views/interests/show.html.erb
+++ b/app/views/interests/show.html.erb
@@ -1,13 +1,11 @@
 <div class="container" id="user_profile">
 	<div class="col-lg-12 text-center well">
-			<h1 align="center"><%= @interest.name %></h1>
-			<h2 align="center">Members</h2>
-	
-    </div>
-  </div>
+		<h1 align="center">Interests</h1>
+			<h3 align="center"><%= @interest.name %></h3>
 	<!-- 	// exactly the opposite as in the profile page -->
 	<!-- Same logic but reverse association -->
 	</div>
+</div>
 </div>
 
 
