--- a/app/views/interests/show.html.erb
+++ b/app/views/interests/show.html.erb
@@ -2,8 +2,11 @@
 	<div class="col-lg-12 text-center well">
 			<h1 align="center"><%= @interest.name %></h1>
 				<% @interest.users.each do |user| %> 
-						<%= link_to user.full_name, user_path(user) %></p>
-				<% end %> 
+						<p><%= link_to user.full_name, user_path(user) %></p>
+						<% end %>
+				<% @interest.users.each do |e| %>
+						<p><%= image_tag e.avatar(:thumb) %></p>
+						<% end %> 
 	</div>
 </div>
 
