--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,10 @@
 
 <div align="center" id="logo">
 	<div id="logo">
-		<img class="logo" src="https://s3-us-west-1.amazonaws.com/myjuntasbucket/photos/Juntas.Logo.png" alt="Juntas_Logo" >
+		<img class="logo" src="https://s3-us-west-1.amazonaws.com/myjuntasbucket/photos/NewJuntasLogo.png" alt="Juntas_Logo" >
 	</div>
-    <div class="embed-container">
-        <%= embed(welcomes.youtube_url) if welcomes.youtube_url %>
+    <div class="container">
+        <iframe width="600" height="400" src="https://www.youtube.com/embed/ABptH56WZ3Y" frameborder="0" allowfullscreen id="juntas_video"></iframe>
     </div> 
 	<ul style="list-style-type:none" class="main-nav">
 		<li>Mission</li>
