--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,82 +20,9 @@ Peach: #faa978*/
 
 
  #logo {
- 	padding-top: 40px;
- 	padding-bottom: 40px; 
+ 	padding-bottom: 20px; 
  }
 
-ul.main-nav {
-	display: inline; 
-	padding: 70px;
-	font-size: 20px;
-	font-style: 'Copperplate/Copperplate Gothic Light', sans-serif;
-
-}
-
-ul.nav.navbar-nav.pull-right {
-  margin-right: 45px;
-}
-
-.navbar-default {
-    border: 0;
-    border-radius: 0;
-    border-color: rgba(34,34,34,.8);
-    background-color: #fce57b;
-    margin-bottom: 0;
-    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
-    -webkit-transition: all .35s;
-    -moz-transition: all .35s;
-    transition: all .35s;
-}
-
-.navbar-default .navbar-header .navbar-brand {
-    font-family: 'Sniglet','Helvetica Neue',Arial,sans-serif;
-    font-weight: 900;
-    color: #f05f40;
-    margin-left: 20px;
-}
-
-.navbar-default .navbar-header .navbar-brand:hover,
-.navbar-default .navbar-header .navbar-brand:focus {
-    color: #eb3812;
-}
-
-.navbar-default .nav > li>a,
-.navbar-default .nav>li>a:focus {
-    text-transform: uppercase;
-    font-size: 13px;
-    font-weight: 700;
-    color: #00d6ff;
-}
-
-
-.navbar-default .nav > li.active>a,
-.navbar-default .nav>li.active>a:focus {
-    color: #f05f40!important;
-    /*background-color: transparent;*/
-}
-
-.navbar-default .nav > li.active>a:hover,
-.navbar-default .nav>li.active>a:focus:hover {
-    /*background-color: transparent;*/
-}
-
-.embed-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 30px;
-  height: 0;
-  overflow: hidden;
-  width: 100%;
-  height: auto;
-  margin-bottom: 12px;
-}
-
-.embed-container iframe,
-.embed-container object,
-.embed-container embed {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%;
-  height: 100%;
+nav-links {
+  display: inline;
 }
