--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,20 +8,22 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </head>
 <body>
-<!-- navbar -->
-  <nav id ="nav" class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type='button' class='navbar-toggle collapsed' data-toggle='collapse' data-target='#bs-navbar'>
-        <span class='sr-only'>Toggle navigation</span>
-        <span class='icon-bar'></span>
-        <span class='icon-bar'></span>
-        <span class='icon-bar'></span>
-      </button> 
-      </div>
-      <div class='navbar-collapse collapse' id='main-navbar'>
-        <ul class='nav navbar-nav pull-right'>
-        <% if current_user %>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+  </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="main-navbar">
+      <ul class="nav navbar-nav navbar-right">
+      <% if current_user %>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.full_name %><span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Your Profile", user_path(current_user), class: "btn btn-danger"%></li>
@@ -31,22 +33,15 @@
             <% end %>
           </ul>
         </li>
-        <ul> 
-        <% else %> 
-        <% if params[:controller] == "sessions" %>
-        <li><%= link_to "Signup", signup_path, class: "nav-links" %></li>
-        <% else %>
-        <% if !current_user %>
-        <li><%= link_to 'Login', login_path, class: "nav-links" %> 
-        <li><%= link_to "Signup", signup_path, class: "nav-links" %></li>
-        </li>
-        <% end %>
-        <% end %> 
-        </ul> 
       </ul>
-    </div>
-    </div> 
-  </nav>
+      <% else %> 
+      <ul class="nav navbar-nav navbar-right">
+     <li><%= link_to 'Login', login_path, class: "nav-links" %></li> 
+        <li><%= link_to "Signup", signup_path, class: "nav-links" %></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
   <!-- error message -->
   <% flash.each do |name, msg| %>
     <div class="alert <%= name == 'error' ? 'alert-danger' : 'alert-info' %>">
