format index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
         <span class="icon-bar"></span>
       </button>
   </div>
+</div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="main-navbar">
@@ -40,7 +41,7 @@
         <li><%= link_to "Signup", signup_path, class: "nav-links" %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+
 </nav>
   <!-- error message -->
   <% flash.each do |name, msg| %>
