--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,16 +1,15 @@
-
-<div align="center" id="logo">
-	<div id="logo">
+<div class="container">
+	<div id="logo" align="center">
 		<img class="logo" src="https://s3-us-west-1.amazonaws.com/myjuntasbucket/photos/NewJuntasLogo.png" alt="Juntas_Logo" >
 	</div>
-    <div class="container">
-        <iframe width="600" height="400" src="https://www.youtube.com/embed/ABptH56WZ3Y" frameborder="0" allowfullscreen id="juntas_video"></iframe>
-    </div> 
-	<ul style="list-style-type:none" class="main-nav">
-		<li>Mission</li>
-		<li><%= link_to "Become a Member", "/signup" %></li>
-		<li>Meet the Team</li>
-	</ul> 
+    <div class="row">
+        <div class="col-md-6" id="about"> 
+            <p align="left">Hi</p>
+        </div>
+        <div id="juntas_video" class="col-md-6">
+            <iframe width="100%" height="350" src="https://www.youtube.com/embed/ABptH56WZ3Y" frameborder="0" allowfullscreen id="juntas_video"></iframe>
+        </div> 
+    </div>
 </div>
 
 
