add index page, font, and about info

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,10 +4,12 @@
 	</div>
     <div class="row">
         <div class="col-md-6" id="about"> 
-            <p align="left">Hi</p>
+            <p align="center">Juntas allows women in tech to connect with each other. Once members create their profiles, they can  connect with others through similar tech interests. Our Mission is to encourage women to share their knowledge and inspire others - one coffee date at a time!</p>
+            <br>
+            <p align="center"><%= link_to "Sign Up and Get Connected!", "/signup" %></p>
         </div>
         <div id="juntas_video" class="col-md-6">
-            <iframe width="100%" height="350" src="https://www.youtube.com/embed/ABptH56WZ3Y" frameborder="0" allowfullscreen id="juntas_video"></iframe>
+            <iframe width="100%" height="320" src="https://www.youtube.com/embed/ABptH56WZ3Y" frameborder="0" allowfullscreen id="juntas_video"></iframe>
         </div> 
     </div>
 </div>
