--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,23 @@
-<div class="container" id="user_profile">
-	<div class="col-lg-12 text-center well">
+<div class="container">
+	<div id="users_name" align="center">
 		<h1 align="center"><%= @user.full_name %></h1>
-		<h3 align="center"><%= @user.email %></h3>
-		<h3 align="center"><%= @user.bio %></h3>
-		<%= image_tag @user.avatar(:medium) %>
-		<h4 class="text-center"> Joined on <%= @user.created_at.to_date.to_formatted_s(:long_ordinal) %></h4>
-		<h3 align="center">Interests</h3>
-		<% @user.interests.each do |i| %>
-		<%= link_to i.name, interest_path(i) %></p>
-		
-		<% end %> 
-		<br>
 	</div>
+    <div class="row">
+    <br><br>
+        <div class="col-md-4" id="profile_image"> 
+            <%= image_tag @user.avatar(:medium) %>
+            <br>
+            <h4 align="center"> Member Since <br><%= @user.created_at.to_date.to_formatted_s(:long_ordinal) %></h4>
+        </div>
+        <div id="profile_info" class="col-md-8">
+            <h2 align="center"><em>About Me<em></h2>
+            <h3 align="center"><%= @user.bio %></h3>  
+            <h2 align="center"><em>My Interests<em></h2>
+            <% @user.interests.each do |i| %>
+            <h3 align="center"><%= link_to i.name, interest_path(i) %></h3>
+            <% end %> 
+        </div> 
+    </div>
 </div>
 
 	
