--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,25 @@
 <div class="container">
 	<div id="users_name" align="center">
-		<h1 align="center"><%= @user.full_name %></h1>
+		<h1 align="center"><b><%= @user.full_name %><b></h1>
 	</div>
     <div class="row">
     <br><br>
-        <div class="col-md-4" id="profile_image"> 
+        <div class="col-md-4" id="profile_image" align="center"> 
             <%= image_tag @user.avatar(:medium) %>
             <br>
-            <h4 align="center"> Member Since <br><%= @user.created_at.to_date.to_formatted_s(:long_ordinal) %></h4>
+            <h4> Member Since <br><%= @user.created_at.to_date.to_formatted_s(:long_ordinal) %></h4>
         </div>
-        <div id="profile_info" class="col-md-8">
-            <h2 align="center"><em>About Me<em></h2>
-            <h3 align="center"><%= @user.bio %></h3>  
-            <h2 align="center"><em>My Interests<em></h2>
+        <div id="profile_info" class="col-md-4" align="center">
+            <h2 align="center"><em><u>About Me:<em></u></h2>
+            <h3><%= @user.bio %></h3>  
+        </div>
+        <div id="profile_info" class="col-md-4" align="center">
+            <h2><em><u>Interests:<em></u></h2>
             <% @user.interests.each do |i| %>
-            <h3 align="center"><%= link_to i.name, interest_path(i) %></h3>
+            <h3><%= link_to i.name, interest_path(i) %></h3>
             <% end %> 
+        </div>
+
         </div> 
     </div>
 </div>
