--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,12 +9,12 @@
             <br>
             <h4> Member Since <br><%= @user.created_at.to_date.to_formatted_s(:long_ordinal) %></h4>
         </div>
-        <div id="profile_info" class="col-md-4" align="center">
-            <h2 align="center"><em><u>About Me:<em></u></h2>
+        <div id="profile_info" class="col-md-4">
+            <h2 align="center"><em><u>About Me:</em></u></h2>
             <h3><%= @user.bio %></h3>  
         </div>
         <div id="profile_info" class="col-md-4" align="center">
-            <h2><em><u>Interests:<em></u></h2>
+            <h2><em><u>Interests:</em></u></h2>
             <% @user.interests.each do |i| %>
             <h3><%= link_to i.name, interest_path(i) %></h3>
             <% end %> 
