--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,10 +27,10 @@
       <% if current_user %>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.full_name %><span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Your Profile", user_path(current_user), class: "btn btn-danger"%></li>
-            <li><%= link_to "Edit Profile", edit_user_path(current_user), class: "btn btn-success" %></li>
-            <li><%= link_to 'Delete Profile', user_path(current_user), method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-danger" %>  
-            <li><%= link_to "Logout", logout_path, class: "nav-links", class: "btn btn-danger" %></li>
+            <li><%= link_to "Your Profile", user_path(current_user)%></li>
+            <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
+            <li><%= link_to 'Delete Profile', user_path(current_user), method: :delete, data: {confirm: 'Are you sure?'} %>  
+            <li><%= link_to "Logout", logout_path, class: "nav-links"%></li>
             <% end %>
           </ul>
         </li>
