--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
 	<div id="users_name" align="center">
 		<h1 align="center"><b><%= @user.full_name %><b></h1>
+		<h3 align="center"><%= @user.email %></h3>
 	</div>
     <div class="row">
     <br><br>
@@ -10,11 +11,11 @@
             <h4> Member Since <br><%= @user.created_at.to_date.to_formatted_s(:long_ordinal) %></h4>
         </div>
         <div id="profile_info" class="col-md-5">
-            <h2 align="center"><em><u>About Me:</em></u></h2>
+            <h2 align="center"><em>About Me:</em></h2>
             <h3><%= @user.bio %></h3>  
         </div>
         <div id="profile_info" class="col-md-3" align="center">
-            <h2><em><u>Interests:</em></u></h2>
+            <h2><em>Interests:</em></h2>
             <% @user.interests.each do |i| %>
             <h3><%= link_to i.name, interest_path(i) %></h3>
             <% end %> 
