--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="main-navbar">
+    <div class="navbar-header">
+        <a href="/"><img src="https://s3-us-west-1.amazonaws.com/myjuntasbucket/photos/Juntaswithouttag.png" width="100" height="50"></a>
+      </div>
       <ul class="nav navbar-nav navbar-right">
       <% if current_user %>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.full_name %><span class="caret"></span></a>
