--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= csrf_meta_tags %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= favicon_link_tag "https://s3-us-west-1.amazonaws.com/myjuntasbucket/photos/juntas_bubbles.png", type:'image/png' %>
 </head>
 <body>
 <nav class="navbar navbar-default">
