--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
             <p align="center"><%= link_to "Sign Up and Get Connected!", "/signup" %></p>
         </div>
         <div id="juntas_video" class="col-md-6">
-            <iframe width="100%" height="320" src="https://www.youtube.com/embed/ABptH56WZ3Y" frameborder="0" allowfullscreen id="juntas_video"></iframe>
+            <iframe width="100%" height="320" src="https://www.youtube.com/embed/e627s-QFnM4" frameborder="0" allowfullscreen></iframe>
         </div> 
     </div>
 </div>
