--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,22 +4,18 @@
 		<hr>
 		<%= form_for @user, url: users_path, html: { multipart: true } do |f| %>
 			<div class="form-group">
-				<%= f.label :full_name, "First Name" %>
-				<%= f.text_field :full_name, autofocus: true, class: "form-control" %> 
+				<%= f.label :full_name, "Full Name:" %>
+				<%= f.text_field :full_name, autofocus: true, class: "form-control"%> 
 			</div>
 			<div class="form-group">
-				<%= f.label :email, "Email" %>
+				<%= f.label :email, "Email:" %>
 				<%= f.email_field :email, class: "form-control"%> 
 			</div>
 			<div class="form-group">
-				<%= f.label :password, "Password" %>
-				<%= f.password_field :password, class: "form-control"%> 
-			</div>
-			<div class="form-group">
-				<%= f.label :bio, "Bio" %>
+				<%= f.label :bio, "About Me:" %>
 				<%= f.text_area :bio, class: "form-control"%> 
 			</div>
-			<div class="form_row">
+      <div class="form_row">
 			  <label for="interests[]">Interests:</label>
 			  <br><%= check_box_tag 'interests[]', 'html' %> HTML
 			  <br><%= check_box_tag 'interests[]', 'css' %> CSS
@@ -30,9 +26,13 @@
 			  <br><%= check_box_tag 'interests[]', 'swift' %> Swift
 			</div>
 			<div> 
-				<p><strong>Image<strong><p>
-        <%= f.file_field :avatar %>
-      </div> 
-				<%= f.submit "Become A Member", class: "btn btn-warning"%>
-				<% end %> 
-</div>
+      </div>
+      <div class="input-group">
+        <h5>Image:<h5>
+        <%= f.file_field :avatar %> 
+      </div>
+      <div align="center">
+			<%= f.submit "Sign Up", class: "btn btn-link"%>
+			</div>
+		<% end %> 
+	</div>
